# printgroup

./: .env.template  .gitignore  AKAZE.py  DBDB.py  Ink.py  Makefile  README.md  add_qr_code.py  app.py  appakaze.py  appink.py  appproc.py  appregist.py  appretrieve.py  find_qr_code.py  main.py  mysql.py  preprocess_image.py  pyproject.toml  update_feature_hash_caches.py
LLAH引き継ぎ/: create_db.cpp  create_dbのPython関数.rtf  imgproc.cpp  retrieve-4.cpp
conda-meta/: brotlipy-0.7.0-py39hb18efdd_1004.json  bzip2-1.0.8-h3422bc3_4.json  ca-certificates-2022.6.15-h4653dfc_0.json  certifi-2022.6.15-py310hbe9552e_0.json  cffi-1.15.0-py39h52b1de0_0.json  charset-normalizer-2.0.12-pyhd8ed1ab_0.json  colorama-0.4.4-pyh9f0ad1d_0.json  conda-4.13.0-py310hbe9552e_1.json  conda-package-handling-1.8.1-py39hb18efdd_1.json  cryptography-37.0.2-py39h4cb6239_0.json  history  idna-3.3-pyhd8ed1ab_0.json  libffi-3.4.2-h3422bc3_5.json  ncurses-6.3-h07bb92c_1.json  openssl-1.1.1p-ha287fd2_0.json  pip-22.1.2-pyhd8ed1ab_0.json  pycosat-0.6.3-py39hb18efdd_1010.json  pycparser-2.21-pyhd8ed1ab_0.json  pyopenssl-22.0.0-pyhd8ed1ab_0.json  pysocks-1.7.1-py39h2804cbe_5.json  python-3.10.5-h71ab1a4_0_cpython.json  python_abi-3.9-2_cp39.json  readline-8.1-hedafd6a_0.json  requests-2.27.1-pyhd8ed1ab_0.json  ruamel_yaml-0.15.80-py39h9eb174b_1007.json  setuptools-62.3.2-py39h2804cbe_0.json  six-1.16.0-pyh6c4a22f_0.json  sqlite-3.38.5-h40dfcc0_0.json  tk-8.6.12-he1e0b03_0.json  tqdm-4.64.0-pyhd8ed1ab_0.json  tzdata-2022a-h191b570_0.json  urllib3-1.26.9-pyhd8ed1ab_0.json  wheel-0.37.1-pyhd8ed1ab_0.json  (+3 more)
(+2371 files in other folders)
