[tool.poetry]
name = "QRAuthenticityJudgment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# scipyが<3.11までしか対応していない
python = ">=3.10,<3.11"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
SQLAlchemy = "^1.4.38"
PyMySQL = "^1.0.2"
scipy = "^1.8.1"
Pillow = "^9.2.0"
matplotlib = "^3.5.2"
Flask = "^2.2.2"
mysqlclient = "^2.1.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
